MudTablePager: Fix Vertical Alignment of Select text (#7501, #7507, #7670)
Followup for issue #7501 and pull request #7507.
The original commit solved the problem, but style is overwritten.
Need to apply !important that it will be taken in live application.

--- a/src/MudBlazor/Styles/components/_table.scss
+++ b/src/MudBlazor/Styles/components/_table.scss
@@ -360,7 +360,7 @@
 
     & .mud-select-input {
         margin-top: 0px !important;
-        padding: 0 7px;
+        padding: 0 7px !important;
     }
 
     & .mud-input .mud-input-root {
